    * FIX: fixed problems after changing D/WATO-configuration
    * FIX: D/WATO: mark site dirty after host deletion
    * FIX: D/WATO: replicate auth.secret, so that login on one site also
           is valid on the replication slaves
    * FIX: implement locking in order to prevent data corruption on
           concurrent changes

    Multisite:
    * New display type 'boxes-omit-root' for BI views
    * Hostgroup view BI Boxes omits the root level
    * Finalized layout if view options and commands/filters/painteroptions.
    * FIX: remove refresh button from dashboard.
    * FIX: remove use of old option defaults.checkmk_web_uri
    * FIX: fixed outgoing bandwidth in fc port perfometer
    * FIX: remove nasty JS error in sidebar
    * FIX: fix folding in custom links (directories would not open)
    * FIX: animation of rotation treeangle in trees works again
    * FIX: Logwatch: Changed font color back to black
    * FIX: show toggle button for checkboxes in deactivated state
    * FIX: fix repeated stacked refresh when toggling columns
    * FIX: disable checkbox button in non-checkboxable layouts
    * FIX: fix table layout for views (gaps where missing sometimes)
    * FIX: Fixed sorting views by perfdata values which contain floats
    * FIX: fix sometimes-broken sizing of sidebar and dashboard on Chrome
    * FIX: fix dashboard layout on iPad
    * FIX: Fixed styling issues of sidebar in IE7
    * FIX: fix problem where filter settings (of checkboxes) are not effective
           when it comes to executing commands

    Mobile:
    * FIX: Fixed logtime filter settings in all mobile views
    * FIX: fix some layout problems

    BI:
    * New aggregation function count_ok, that counts the number
      of nodes in state OK.
    * FIX: Removed debug output int count_ok aggregation

    Checks & Agents:
    * Linux: Modified cluster section to allow pacemaker/corosync clusters without heartbeat