@@ -18,6 +18,7 @@
            is valid on the replication slaves
     * FIX: implement locking in order to prevent data corruption on
            concurrent changes
+    * FIX: Fixed handling of validation errors in cascading dropdown fields
 
     Multisite:
     * New display type 'boxes-omit-root' for BI views
